# kitfour

./: README.md  bonnie.toml
client/: Cargo.toml  Makefile  README.md  Trunk.toml  bonnie.toml  index.html  package-lock.json
client/docs/: index.html  rust-yew-app-552b8cc619c5bdaf_bg.wasm
client/docs/.stage/: index.html  rust-yew-app-3be3c5d7ba6467af.js  rust-yew-app-3be3c5d7ba6467af_bg.wasm
client/src/: main.rs
client/styles/: tailwind.css
docs/: index.css  index.html  rust-yew-app-552b8cc619c5bdaf.js
server/: Cargo.toml  bonnie.toml  input.css  tailwind.config.js
server/public/: index.html  output.css
server/src/: lib.rs  main.rs
server/src/catfacts/: index.rs  mod.rs
server/src/catimages/: index.rs  mod.rs
